@@ -1,3 +1,8 @@
+Tue Oct 26 10:41:29 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)
+
+	* valops.c (value_assign): Call reinit_frame_cache when assigning
+	to a register.
+
 Mon Oct 25 11:08:59 1993  Stu Grossman  (grossman at cygnus.com)
 
 	* infrun.c (wait_for_inferior):  Fix PC out of objfile bounds
